--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.13.4",
     "mongoose": "^4.4.15",
     "multer": "^1.3.0",
+    "node-async-loop": "^1.2.2",
     "q": "^1.5.0"
   },
   "devDependencies": {},
