--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.3.0",
     "node-async-loop": "^1.2.2",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "q": "^1.5.0"
   },
